# private-formation-datagen

./: .gitignore  Cargo.toml  build.rs  notes.md
src/: base.rs  main.rs  results.rs  simulation.rs  simulation_2d.rs  tasks.rs  trajectory.rs
src/dubins/: bindings.rs  mod.rs
src/tf_record/: example.rs  feature.rs  mod.rs
