[package]
name = "datagen"
version = "0.1.0"
authors = ["Matt Jadczak <matt@mjdk.co.uk>"]

[dependencies]
clap = "~2.31.1"
pid_control = "~0.7.2"
num = "~0.1.42"
rand = "~0.5.0-pre.0"
csv = "1.0.0-beta.5"
protobuf = "1.5.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
time = "0.1"
crc = "^1.0.0"
byteorder = "~1.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"