[package]
name = "datagen"
version = "0.9.0"
authors = ["Matt Jadczak <matt@mjdk.co.uk>"]
links = "dubins"

[dependencies]
clap = "~2.31.1"
pid_control = "~0.7.2"
num = "~0.1.42"
rand = "0.5.0"
csv = "1.0.0-beta.5"
protobuf = "1.5.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
time = "0.1"
crc = "^1.0.0"
byteorder = "~1.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4"
pretty_env_logger = "0.2"
slugify = "0.1.0"
specs = "0.11.2"
specs-derive = "0.2.0"
nalgebra = "0.15.1"